--- a/src/index.css
+++ b/src/index.css
@@ -135,5 +135,22 @@ button{
   border: solid 2px var(--red);
 }
 progress{
-  color: #A729F5;
+  width: 80%;
+  border-radius: 25px;
+  overflow: hidden;
+  height: 16px;
+  box-shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+
+}
+progress::-webkit-progress-value{
+  -webkit-appearance: none;
+  background-color: #A729F5;
+  height: 8px;
+  border-radius: 10px;
+  box-shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+  transition: 0.4s;
+}
+progress::-webkit-progress-bar{
+  background-color: white;
+  
 }
