--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,10 @@ button{
   border: none;
   width: 100%;
 }
+button:hover{
+  background-color: white;
+  color: var(--purple);
+}
 .score-board >section{
   gap: 15px;
   padding: 32px;
